@@ -8,6 +8,12 @@ Feel free to contact me directly with any queries:
   attie@attie.co.uk
 
 
+=== Building ===
+If you are building libxbee, then there are a number of options avaliable to you.
+"config.mk" contains most of the options you may want to change, and it is
+recommended that you don't modify the other makefiles
+
+
 === Installation ===
 To install libxbee simply type:
   $ make install
