@@ -30,6 +30,7 @@ struct xbee_conSettings {
 	unsigned char queueChanges     : 1;
 	unsigned char multicast        : 1;
 	unsigned char noBlock          : 1;
+	unsigned char catchAll         : 1;
 	unsigned char broadcastRadius;
 };
 .fi
